colcon_ws/log/build_2022-09-10_07-02-59/dasc_robot/stderr.log
/root/colcon_ws/src/robot-framework/src/trajectory_follower.cpp: In constructor ‘TrajectoryFollower::TrajectoryFollower(std::shared_ptr<DASCRobot>)’:
/root/colcon_ws/src/robot-framework/src/trajectory_follower.cpp:25:40: error: ‘traj_callback’ is not a member of ‘TrajectoryFollower’
   25 |         std::bind(&TrajectoryFollower::traj_callback, this, _1));
      |                                        ^~~~~~~~~~~~~
/root/colcon_ws/src/robot-framework/src/trajectory_follower.cpp: In member function ‘void TrajectoryFollower::set_takeoff_traj()’:
/root/colcon_ws/src/robot-framework/src/trajectory_follower.cpp:87:43: error: ‘using SharedPtr = class std::shared_ptr<rclcpp::Clock>’ {aka ‘class std::shared_ptr<rclcpp::Clock>’} has no member named ‘now’
   87 |     traj.header.stamp = this->get_clock().now();
      |                                           ^~~
/root/colcon_ws/src/robot-framework/src/trajectory_follower.cpp: In member function ‘void TrajectoryFollower::timer_callback()’:
/root/colcon_ws/src/robot-framework/src/trajectory_follower.cpp:125:46: error: invalid use of non-static member function ‘rclcpp::Time rclcpp::Node::now() const’
  125 |     std::chrono::duration<double> dur = (now - traj.header.stamp);
      |                                          ~~~~^~~~~~~~~~~~~~~~~~~
In file included from /opt/ros/foxy/include/rclcpp/executors/single_threaded_executor.hpp:28,
                 from /opt/ros/foxy/include/rclcpp/executors.hpp:22,
                 from /opt/ros/foxy/include/rclcpp/rclcpp.hpp:146,
                 from /root/colcon_ws/src/robot-framework/include/dasc_robot/DASCRobots.hpp:6,
                 from /root/colcon_ws/src/robot-framework/src/trajectory_follower.cpp:2:
/opt/ros/foxy/include/rclcpp/node.hpp:1025:3: note: declared here
 1025 |   now() const;
      |   ^~~
/root/colcon_ws/src/robot-framework/src/trajectory_follower.cpp:138:20: warning: comparison of integer expressions of different signedness: ‘int’ and ‘std::vector<double, std::allocator<double> >::size_type’ {aka ‘long unsigned int’} [-Wsign-compare]
  138 |    for (int i=0; i < traj.ts.size(); i++){
      |                  ~~^~~~~~~~~~~~~~~~
make[2]: *** [CMakeFiles/trajectory_follower.dir/build.make:63: CMakeFiles/trajectory_follower.dir/src/trajectory_follower.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:94: CMakeFiles/trajectory_follower.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
